public/css/tailwind.css
@tailwind base;

/* Custom CSS */

/* Main CSS */

html,
body {
  margin: 0;
  padding: 0;
  height: 100vh;
  width: 100vw;
  overflow-x: hidden;
  box-sizing: border-box;
  background: linear-gradient(122.51deg, #e6ecfc 30%, #7fb4f1 100%) !important;
  scroll-behavior: smooth;
}

@tailwind components;

.chartjs-container {
  position: relative;
  margin: auto;
  height: 75vh;
  width: 75vw;
}

.tradebyte-logo {
  color: #1955e4;
  text-shadow: 1px 2px 40px rgba(0, 0, 0, 0.5);
}

.user-profile {
  border-radius: 100px;
  border: 10px solid #1955e4;
}

.tick {
  height: 20px;
  width: 20px;
  border-radius: 50%;
  background-color: #38cda0;
  color: white;
}

.tick-background {
  background: #a9f7e6;
  border-radius: 29px;
  color: #1b9b7f;
}

.tab-color {
  border-radius: 10px;
  border-color: #1955e4;
  color: #1955e4;
}

.view-link {
  color: #1955e4;
}

.view-link:hover {
  color: #0d338a;
}

.button {
  background-color: #1955e4;
}

.button:hover {
  background-color: #0d338a;
}

.table-content {
  overflow: scroll;
  overflow-x: scroll;
  overflow-y: auto;
}

.transaction-companySymbol {
  color: rgb(0, 0, 0);
  font-weight: 700;
  font-size: 1.1rem;
}

.transaction-input:focus {
  outline: none;
}

.transaction-cancel {
  background-color: rgb(246, 76, 76);
}

.transaction-cancel:hover {
  background-color: rgb(208, 7, 7);
}

.transaction-buy {
  background-color: #52af93;
}

.transaction-buy:hover {
  background-color: #089e7e;
}

.symbolicon {
  font-size: 72px;
  background: -webkit-linear-gradient(#eee, #333);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.notification {
  position: relative;
  display: inline-block;
}

.notification .badge {
  position: absolute;
  top: -5px;
  right: -5px;
  padding: 5px 2px;
  border-radius: 50%;
  background-color: #0072ff;
  color: white;
}

/* search bar */
#searchbar:focus .search-list {
  display: block;
}

/* Login Page */
animated {
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.animated.faster {
  -webkit-animation-duration: 500ms;
  animation-duration: 500ms;
}

.fadeIn {
  -webkit-animation-name: fadeIn;
  animation-name: fadeIn;
}

.fadeOut {
  -webkit-animation-name: fadeOut;
  animation-name: fadeOut;
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@keyframes fadeOut {
  from {
    opacity: 1;
  }

  to {
    opacity: 0;
  }
}

.serif {
  font-family: "Zilla Slab", serif;
}

[x-cloak] {
  display: none;
}

.grid-indigo {
  background-image: radial-gradient(#5a67d8 2px, transparent 2px);
  background-size: 16px 16px;
}

@tailwind utilities;

